--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
+
+  <body>
+    <p>Redlining repo: https://github.com/mcerlean/redline/tree/main</p>
+      <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+  </body>
   <video controls width="250">
   <source src=""C:\Users\mmcer\Desktop\other\SCHOOL\CLASSES\FALL 2023\STAT 172\final project\Redlining (Maddie McErlean).mp4"" type="video/mp4" />
 </html>
