--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <title>Maddie McErlean</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
-
+    <p>I'm a Drake University student double majoring in Data Analytics and Computer Science.</p>
   <body>
-    <p>Redlining repo: https://github.com/mcerlean/redline/tree/main</p>
-      <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+    <p>Redlining repo:</p> <a href="url"> https://github.com/mcerlean/redline/tree/main</a>
   <video controls width="250">
   <source src=""C:\Users\mmcer\Desktop\other\SCHOOL\CLASSES\FALL 2023\STAT 172\final project\Redlining (Maddie McErlean).mp4"" type="video/mp4" />
 </html>
