--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
     <p>I'm a Drake University student double majoring in Data Analytics and Computer Science.</p>
   <body>
-    <p>Redlining repo:</p> <a href="url"> https://github.com/mcerlean/redline/tree/main</a>
-  <video controls width="250">
-  <source src=""C:\Users\mmcer\Desktop\other\SCHOOL\CLASSES\FALL 2023\STAT 172\final project\Redlining (Maddie McErlean).mp4"" type="video/mp4" />
-</html>
+    <a href="https://github.com/mcerlean/redline/tree/main">Redlining repository</a>
+  <video controls width="450">
+  <source src="C:\Users\mmcer\Desktop\other\SCHOOL\CLASSES\FALL 2023\STAT 172\final project\Redlining (Maddie McErlean).mp4" type="video/mp4" />
+  </video>
+  </html>
