--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <p>I'm a Drake University student double majoring in Data Analytics and Computer Science.</p>
   <body>
     <a href="https://github.com/mcerlean/redline/tree/main">Redlining repository</a>
+  <p>Redlining presentation:</p>
   <video controls width="450">
   <source src="C:\Users\mmcer\Desktop\other\SCHOOL\CLASSES\FALL 2023\STAT 172\final project\Redlining (Maddie McErlean).mp4" type="video/mp4" />
   </video>
