--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Maddie McErlean</title>
   </head>
   <body>
+    <a href="p2.html" target="_self">Link to page 2</a>
     <p>I'm a Drake University student double majoring in Data Analytics and Computer Science.</p>
     <a href="https://github.com/mcerlean/redline/tree/main">Redlining repository</a>
     <p>Redlining presentation:</p>
