--- a/index.html
+++ b/index.html
@@ -1,15 +1,47 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Maddie McErlean</title>
-  </head>
-  <body>
-    <a href="p2.html" target="_self">Link to page 2</a>
-    <p>I'm a Drake University student double majoring in Data Analytics and Computer Science.</p>
-    <a href="https://github.com/mcerlean/redline/tree/main">Redlining repository</a>
-    <p>Redlining presentation:</p>
-    <video controls width="450">
-    <source src="C:\Users\mmcer\Desktop\other\SCHOOL\CLASSES\FALL 2023\STAT 172\final project\Redlining (Maddie McErlean).mp4" type="video/mp4" />
-    </video>
-  <body>
-  </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+<!-- Tabs and names -->
+  <ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+    <li><a data-toggle="tab" href="#projectslinks">Projects and Links</a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div id="home" class="tab-pane fade in active">
+      <!-- Header for Home -->
+  	<h2>Maddie McErlean</h2>
+      <h3>Hi!</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div id="projectslinks" class="tab-pane fade">
+      <h3>Projects</h3>
+      <h4>Redlining Analysis</h4>
+      <p><a href="https://github.com/mcerlean/redline/tree/main">Redlining project repository</a></p>
+      <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course.</p>
+      <h4>In Progress:</h4>
+      <h4>Data Analysis Capstone</h4>
+      <p></p>
+      <h4>Computer Science Capstone</h4>
+      <p></p>
+      <p></p>
+      <p></p>
+      <h3>Links</h3>
+      <p><a href="https://www.linkedin.com/in/maddie-mcerlean-637bb4225/">LinkedIn</a></p>
+      <p><a href="https://github.com/mcerlean/">GitHub</a></p>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
