--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Maddie McErlean</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -21,21 +21,21 @@
     <div id="home" class="tab-pane fade in active">
       <!-- Header for Home -->
   	<h2>Maddie McErlean</h2>
+      <img src="headshot.JPG" alt="Headshot">
       <h3>Hi!</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>I'm a Drake University senior expected to graduate in May. I'm double majoring in Data Analytics and Computer Science. </p>
     </div>
+    <!-- Second link -->
     <div id="projectslinks" class="tab-pane fade">
       <h3>Projects</h3>
       <h4>Redlining Analysis</h4>
       <p><a href="https://github.com/mcerlean/redline/tree/main">Redlining project repository</a></p>
-      <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course.</p>
+      <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course. The goal was to generate solutions for a potential client - mine being the Department of Justice's Combatting Redlining Initiative.</p>
       <h4>In Progress:</h4>
       <h4>Data Analysis Capstone</h4>
-      <p></p>
+      <p>Using R, my group is scraping and cleaning power outage and weather data to look at and analyze the relationship between weather events and power outages, and quantify risk.</p>
       <h4>Computer Science Capstone</h4>
-      <p></p>
-      <p></p>
-      <p></p>
+      <p>Using Python and Git, my group created a website that displayed the location of a Tile Mate tracker. We modeled it as if we were tracking our live mascot, Griff II.</p>
       <h3>Links</h3>
       <p><a href="https://www.linkedin.com/in/maddie-mcerlean-637bb4225/">LinkedIn</a></p>
       <p><a href="https://github.com/mcerlean/">GitHub</a></p>
