--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   	<h2>Maddie McErlean</h2>
       <img src="headshot.JPG" alt="Headshot">
       <h3>Hi!</h3>
-      <p>I'm a Drake University senior expected to graduate in May. I'm double majoring in Data Analytics and Computer Science. </p>
+      <p>I'm a Drake University senior expected to graduate in May. I'm double majoring in Data Analytics and Computer Science, and have taken many courses on Statistics and different Computer Science specialties like Machine Learning and Software Engineering. My mission in life is to become the ebst version of myself through my work and my actions. I'm excited to join the workforce and apply my skills and knowledge to my field! <br>
+      </p>
     </div>
     <!-- Second link -->
     <div id="projectslinks" class="tab-pane fade">
@@ -31,11 +32,14 @@
       <h4>Redlining Analysis</h4>
       <p><a href="https://github.com/mcerlean/redline/tree/main">Redlining project repository</a></p>
       <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course. The goal was to generate solutions for a potential client - mine being the Department of Justice's Combatting Redlining Initiative.</p>
+      <img src="plot.JPG" alt="This is a plot of the percentage of white people in a metropolitan area in comparison to the HOLC grade that area received."><img src="map.png" alt="Map created showing the average HOLC grade per state (if they received any)">
       <h4>In Progress:</h4>
       <h4>Data Analysis Capstone</h4>
       <p>Using R, my group is scraping and cleaning power outage and weather data to look at and analyze the relationship between weather events and power outages, and quantify risk.</p>
+      <img src="OR_Outages.png" alt="Map created showing the average Oregon outages by area"><img src="OR_Outages_Cause.png" alt="Supplemental maps showing outages by cause">
       <h4>Computer Science Capstone</h4>
       <p>Using Python and Git, my group created a website that displayed the location of a Tile Mate tracker. We modeled it as if we were tracking our live mascot, Griff II.</p>
+      <img src="griff.png" alt="Map created showing where the Tile Mate tracker is in relation to campus">
       <h3>Links</h3>
       <p><a href="https://www.linkedin.com/in/maddie-mcerlean-637bb4225/">LinkedIn</a></p>
       <p><a href="https://github.com/mcerlean/">GitHub</a></p>
