--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Tabs and names -->
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-    <li><a data-toggle="tab" href="#projectslinks">Projects and Links</a></li>
+    <li><a data-toggle="tab" href="#project">Projects</a></li>
   </ul>
 
   <div class="tab-content">
@@ -25,9 +25,12 @@
       <h3>Hi!</h3>
       <p>I'm a Drake University senior expected to graduate in May. I'm double majoring in Data Analytics and Computer Science, and have taken many courses on Statistics and different Computer Science specialties like Machine Learning and Software Engineering. My mission in life is to become the ebst version of myself through my work and my actions. I'm excited to join the workforce and apply my skills and knowledge to my field! <br>
       </p>
+      <h3>Links</h3>
+      <p><a href="https://www.linkedin.com/in/maddie-mcerlean-637bb4225/">LinkedIn</a></p>
+      <p><a href="https://github.com/mcerlean/">GitHub</a></p>
     </div>
     <!-- Second link -->
-    <div id="projectslinks" class="tab-pane fade">
+    <div id="project" class="tab-pane fade">
       <h3>Projects</h3>
       <h4>Redlining Analysis</h4>
       <p><a href="https://github.com/mcerlean/redline/tree/main">Redlining project repository</a></p>
@@ -40,9 +43,6 @@
       <h4>Computer Science Capstone</h4>
       <p>Using Python and Git, my group created a website that displayed the location of a Tile Mate tracker. We modeled it as if we were tracking our live mascot, Griff II.</p>
       <img src="griff.png" alt="Map created showing where the Tile Mate tracker is in relation to campus">
-      <h3>Links</h3>
-      <p><a href="https://www.linkedin.com/in/maddie-mcerlean-637bb4225/">LinkedIn</a></p>
-      <p><a href="https://github.com/mcerlean/">GitHub</a></p>
     </div>
   </div>
 </div>
