--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <h4>Redlining Analysis</h4>
       <p><a href="https://github.com/mcerlean/redline/tree/main">Redlining project repository</a></p>
       <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course. The goal was to generate solutions for a potential client - mine being the Department of Justice's Combatting Redlining Initiative.</p>
-      <img src="plot.png" alt="This is a plot of the percentage of white people in a metropolitan area in comparison to the HOLC grade that area received."><img src="map.png" alt="Map created showing the average HOLC grade per state (if they received any)">
+      <img src="plot.png" alt="This is a plot of the percentage of white people in a metropolitan area in comparison to the HOLC grade that area received." width="400" height="364"><img src="map.png" alt="Map created showing the average HOLC grade per state (if they received any)" width="400" height="224">
       <h4>In Progress:</h4>
       <h4>Data Analysis Capstone</h4>
       <p>Using R, my group is scraping and cleaning power outage and weather data to look at and analyze the relationship between weather events and power outages, and quantify risk.</p>
-      <img src="OR_Outages.png" alt="Map created showing the average Oregon outages by area"><img src="OR_Outages_Cause.png" alt="Supplemental maps showing outages by cause">
+      <img src="OR_Outages.png" alt="Map created showing the average Oregon outages by area" width="400" height="400"><img src="OR_Outages_Cause.png" alt="Supplemental maps showing outages by cause" width="400" height="400">
       <h4>Computer Science Capstone</h4>
       <p>Using Python and Git, my group created a website that displayed the location of a Tile Mate tracker. We modeled it as if we were tracking our live mascot, Griff II.</p>
-      <img src="griff.png" alt="Map created showing where the Tile Mate tracker is in relation to campus">
+      <img src="griff.png" alt="Map created showing where the Tile Mate tracker is in relation to campus" width="300" height="259">
     </div>
   </div>
 </div>
