--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h3>Projects</h3>
       <h4>Redlining Analysis</h4>
       <p><a href="https://github.com/mcerlean/redline/tree/main">Redlining project repository</a></p>
-      <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course. The goal was to generate solutions for a potential client - mine being the Department of Justice's Combatting Redlining Initiative.</p>
+      <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course. The goal was to generate actionable solutions for a potential client - mine being the Department of Justice's Combatting Redlining Initiative.</p>
       <img src="plot.png" alt="This is a plot of the percentage of white people in a metropolitan area in comparison to the HOLC grade that area received." width="400" height="364"><img src="map.png" alt="Map created showing the average HOLC grade per state (if they received any)" width="400" height="224">
       <h4>In Progress:</h4>
       <h4>Data Analysis Capstone</h4>
