--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   	<h2>Maddie McErlean</h2>
       <img src="headshot.JPG" alt="Headshot">
       <h3>Hi!</h3>
-      <p>I'm a Drake University senior expected to graduate in May. I'm double majoring in Data Analytics and Computer Science, and have taken many courses on Statistics and different Computer Science specialties like Machine Learning and Software Engineering. My mission in life is to become the ebst version of myself through my work and my actions. I'm excited to join the workforce and apply my skills and knowledge to my field! <br>
+      <p>I'm a Drake University senior expected to graduate in May. I'm double majoring in Data Analytics and Computer Science, and have taken many courses on Statistics and different Computer Science specialties like Machine Learning and Software Engineering. My mission in life is to become the best version of myself through my work and my actions. I'm excited to join the workforce and apply my skills and knowledge to my field! <br>
       </p>
       <h3>Links</h3>
       <p><a href="https://www.linkedin.com/in/maddie-mcerlean-637bb4225/">LinkedIn</a></p>
