updated for amstand

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <!-- Second link -->
     <div id="project" class="tab-pane fade">
       <h3>Projects</h3>
+      <h4><em>American Standard Magazine</em><h4>
+      <p><a href="https://americanstandardmag.github.io/magazine/index.html">Magazine Website</p>
+      <p>Using HTML, I created a website for some of my colleagues for their new magazine, the <em>American Standard</em>. It was first published in November 2025, written solely in HTML. I maintain and update the website by myself as we release monthly magazines and we have authors submit articles for publication.</p>
       <h4>Redlining Analysis</h4>
       <p><a href="https://github.com/mcerlean/redline/tree/main">Redlining project repository</a></p>
       <p>Using R, I completed an analysis of the redlining dataset from FiveThirtyEight to see if redlining can be combatted for my STAT 172 course. The goal was to generate actionable solutions for a potential client - mine being the Department of Justice's Combatting Redlining Initiative.</p>
